language/move-lang/tests/move_check/liveness/move_in_infinite_loop_branched.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/liveness/move_in_infinite_loop_branched.move:5:28
  │
5 │             loop { let y = move x; y / y; }
  │                            ^^^^^^
  │                            │
  │                            Invalid usage of variable 'x'
  │                            The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
  ┌─ tests/move_check/liveness/move_in_infinite_loop_branched.move:7:28
  │
7 │             loop { let y = move x; y % y; }
  │                            ^^^^^^
  │                            │
  │                            Invalid usage of variable 'x'
  │                            The variable might not have a value due to this position. The variable must be assigned a value before being used

